# ntsm

./: .gitmodules  Makefile.am  README.md  configure.ac  ntsmSiteGen
data/: 31_AT.fa  31_CG.fa  human_sites_center.txt
ntsm-scripts/: convertTSVtoPCA.py  extractSNPsfromVCF.py  makefile
scratch/: extractRelevantSites.pl  extractVCF.pl  filterMAF.pl  mergeCounts.pl  parseCounts.pl
scripts/: compareFP.pl  extractRelevantSites.pl  extractSNPsfromVCF.py  filterMAF.pl  filterRepetiveSNP.pl  filterSNPDist.pl  generateSites  mergeCounts.pl  parseCounts.pl  sampleReads.pl
src/: CompareCounts.hpp  FingerPrint.hpp  Makefile.am  MultiCount.hpp  Options.cpp  Options.h  Util.h  VCFConvert.hpp  ntSeqMatchCount.cpp  ntSeqMatchEval.cpp  ntSeqMatchVCF.cpp  ntfp.cpp  ntfpEval.cpp
